force-app/main/default/objects/Additional_Charge__c/Additional_Charge__c.object-meta.xml
<CustomObject>
    <label>Additional Charge</label>
    <nameField>
        <label>Additional Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>