force-app/main/default/objects/Additional_Charge__c/fields/Block_Name__c.field-meta.xml
<CustomField>
    <fullName>Block_Name__c</fullName>
    <formula>Booking__r.Plot__r.Block1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Block Name</label>
    <type>Text</type>
</CustomField>