force-app/main/default/objects/Additional_Charge__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <formula>Booking__r.Plot__r.Project__r.Company_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Name</label>
    <type>Text</type>
</CustomField>