force-app/main/default/objects/Additional_Charge__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <displayFormat>ADC-{0000}</displayFormat>
    <label>ID</label>
    <type>AutoNumber</type>
</CustomField>