force-app/main/default/objects/Additional_Charge__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <formula>TEXT(Booking__r.Project__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project</label>
    <type>Text</type>
</CustomField>