force-app/main/default/objects/Additional_Charge__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <formula>Text(Booking__r.Project__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>